fix: align username with social icons

--- a/frontend/src/components/Social/styles.css
+++ b/frontend/src/components/Social/styles.css
@@ -11,7 +11,7 @@
 }
 
 .social-username {
-    margin: 0;
+    margin: 0 0 0 5px;
     color: black;
     font-size: 1.2rem;
 }
